examples/LINUX/tests/errors/variable-too-long.biplan


// Variable name length limit, the variable name used is 20 characters long.
// When BP_KEYWORD_MAX is set to 20 bcc can compile keywords of
// up to 19 characters

@asdasdasdasdasdasdas = 1

print @asdasdasdasdasdasdas

stop
